--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "echo 'Error: no test specified' && exit 0"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql2": "^3.17.2"
   },
   "devDependencies": {
     "eslint": "^8.0.0"
